# property-price-model

./: .flaskenv  .gitignore  Procfile  README.md  config.py  lessons_learned.md  pyproject.toml  requirements.txt  sales.py  wsgi.py
migrations/versions/: 3c58af9c8716_add_incode_and_outcode_to_sale.py  6305fe90f47c_sales_table.py
property_price_model/: __init__.py  forms.py  models.py  postcodes.py  routes.py
property_price_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
property_price_model/notebooks/: property_sales.ipynb  sales_db_specification.ipynb
property_price_model/notebooks/data/: sql_loader.py
property_price_model/plotlydash/: callbacks.py  dashboard.py  layout.py
property_price_model/templates/: base.html  index.html  postcode_info.html
tests/: test_postcodes.py  test_property_price_model.py
