[tool.poetry]
name = "property-price-model"
version = "0.1.0"
description = ""
authors = ["jonny <jonny@insurami.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
jupyter = "^1.0.0"
pandas = "^1.1.0"
requests = "^2.24.0"
jupyterlab = "^2.2.4"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
